--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Learning Discrete Latent Structure</title>
+    <title>Statistical Models in Biology</title>
 
   </head>
   <body>
